nohup.out
  File "recorrido.py", line 15
    for sigma np.arange(0.10, 0.71, 0.10):
               ^
SyntaxError: invalid syntax
